# qtcreator-plugin-ubuntu

./: UbuntuPlugin.pro  ubuntu.pro
debian/: changelog  control
share/qtcreator/templates/wizards/ubuntu/goscope/: displayName.apparmor  displayName.goproject  displayName.ini  (+2 more)
share/qtcreator/templates/wizards/ubuntu/scope-js/: .bzrignore  CMakeLists.txt  manifest.json.in  wizard.xml
share/qtcreator/templates/wizards/ubuntu/scope-js/po/: CMakeLists.txt
share/qtcreator/templates/wizards/ubuntu/scope-js/src/: CMakeLists.txt  displayName.js
share/qtcreator/templates/wizards/ubuntu/scope-js/src/data/: displayName-settings.ini.in  displayName.ini.in
share/qtcreator/ubuntu/: menu.json
share/qtcreator/ubuntu/qml/DevicesPage/: DevicePage.qml
share/qtcreator/ubuntu/scripts/: local_get_cordova_runtime  local_package_installed  qtc_bzr_info  qtc_desktop_snaprunner.py  run_snapcraft.py
src/ubuntu/: UbuntuProject.mimetypes.xml  ubuntu.pro  ubuntuconstants.h  ubuntudevicesmodel.cpp  ubuntudevicesmodel.h  ubuntuhtml5devtools.cpp  ubuntuhtml5devtools.h  ubuntulocalrunconfiguration.cpp  ubuntumenu.cpp  ubuntupackagestep.cpp  ubuntupackagingmode.cpp  ubuntupackagingmodel.cpp  ubuntuplugin.cpp  ubuntuplugin.h  ubuntuproject.cpp  ubuntuprojectapplicationwizard.cpp  ubuntuprojectapplicationwizard.h
src/ubuntu/snap/: snap.pri
src/ubuntu/snap/project/: snapcraftbuildconfiguration.cpp  snapcraftbuildconfigurationfactory.cpp  snapcraftproject.cpp  snapcraftproject.h  snapcraftprojectfile.cpp  snapcraftprojectfile.h  snapcraftprojectmanager.cpp  snapcraftprojectmanager.h  snapcraftprojectnode.cpp  snapcraftprojectnode.h  snapcraftstep.cpp  snapcraftstep.h  snaprunconfiguration.cpp  snaprunconfiguration.h
tests/autopilot/qtcreator_plugin_ubuntu/: __init__.py
tests/autopilot/qtcreator_plugin_ubuntu/helpers/: __init__.py  tabbar.py
tests/autopilot/qtcreator_plugin_ubuntu/tests/: __init__.py  test_loading_plugin.py
tests/autopilot/ubuntuuitoolkit/_custom_proxy_objects/: _header.py
(+22 files in other folders)
